# qa_guru_python_6_19

./: README.md  pyproject.toml
