[tool.poetry]
name = "qa-guru-python-6-19"
version = "0.1.0"
description = "homework_6_19"
authors = ["Amalia <Amalia020900@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "7.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
